--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
     <head>
-        <title>こんにちは</title>
         <meta charset = "UTF-8">
+        <title>こんにちは</title>
     </head>
     <body>
         <h1>こんにちは</h1>
